Criar dim_local

--- a/models/staging/erp/fonte_erp.yml
+++ b/models/staging/erp/fonte_erp.yml
@@ -24,3 +24,24 @@ sources:
             tests:
               - unique
               - not_null
+           
+      - name: address
+        columns:
+          - name: addressid
+            tests:
+              - unique
+              - not_null
+      
+      - name: stateprovince
+        columns:
+          - name: stateprovinceid
+            tests:
+              - unique
+              - not_null
+
+      - name: countryregion
+        columns:
+          - name: countryregioncode
+            tests:
+              - unique
+              - not_null
