--- a/models/bronze/erp/fonte_erp.yml
+++ b/models/bronze/erp/fonte_erp.yml
@@ -45,3 +45,38 @@ sources:
             tests:
               - unique
               - not_null
+
+      - name: person
+        columns:
+          - name: businessentityid
+            tests:
+              - unique
+              - not_null
+
+      - name: customer
+        columns:
+          - name: customerid
+            tests:
+              - unique
+              - not_null
+
+      - name: creditcard
+        columns:
+          - name: creditcardid
+            tests:
+              - unique
+              - not_null
+
+      - name: emailaddress
+        columns:
+          - name: businessentityid
+            tests:
+              - unique
+              - not_null
+
+      - name: personphone
+        columns:
+          - name: businessentityid
+            tests:
+              - unique
+              - not_null
