Ajustar configuração da fonte_erp.yml

--- a/models/bronze/erp/fonte_erp.yml
+++ b/models/bronze/erp/fonte_erp.yml
@@ -80,3 +80,31 @@ sources:
             tests:
               - unique
               - not_null
+
+      - name: salesorderdetail
+        columns:
+          - name: salesorderdetailid
+            tests:
+              - unique
+              - not_null
+
+      - name: salesorderheader
+        columns:
+          - name: salesorderid
+            tests:
+              - unique
+              - not_null
+
+      - name: salesorderheadersalesreason
+        columns:
+          - name: salesorderid
+            tests:
+              - unique
+              - not_null
+            
+      - name: salesreason
+        columns:
+          - name: salesreasonid
+            tests:
+              - unique
+              - not_null
