--- a/models/gold/dim_produto.yml
+++ b/models/gold/dim_produto.yml
@@ -2,20 +2,20 @@ models:
   - name: dim_produto
     description: Dimensão de Produto da database da Adventure Works
     columns:
-        - name: UID_PRODUTO
+        - name: SK_PRODUTO
           description: Código único (chave primária) do Produto
           tests:
             - unique
             - not_null
 
-        - name: DES_PRODUTO
+        - name: DESCRICAO_PRODUTO
           description: Descrição do produto
 
-        - name: COD_PRODUTO
+        - name: CODIGO_PRODUTO
           description: Código do produto
 
-        - name: NOM_SUBCATEGORIA
+        - name: DESCRICAO_SUBCATEGORIA
           description: Subcategoria do produto
 
-        - name: NOM_CATEGORIA
+        - name: DESCRICAO_CATEGORIA
           description: Categoria do produto
