--- a/models/silver/silver__cliente.yml
+++ b/models/silver/silver__cliente.yml
@@ -2,17 +2,17 @@ models:
   - name: silver__cliente
     description: Modelo que enriquece os dados de cliente ao adicionar nome completo, e-mail e telefone
     columns:
-        - name: UID_CLIENTE
+        - name: ID_CLIENTE
           description: Código único (chave primária) de Cliente
           tests:
             - unique
             - not_null
 
-        - name: NOM_COMPLETO
+        - name: NOME_COMPLETO
           description: Nome completo do cliente
 
-        - name: DES_EMAIL
+        - name: DESCRICAO_EMAIL
           description: E-mail do cliente
 
-        - name: NUM_TELEFONE
+        - name: NUMERO_TELEFONE
           description: Número de telefone do cliente
